# Automake Makefile template for Snogray photon-mapping library, libsnogphoton.a
#
#  Copyright (C) 2005-2013  Miles Bader <miles@gnu.org>
#
# This source code is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License as
# published by the Free Software Foundation; either version 3, or (at
# your option) any later version.  See the file COPYING for more details.
#
# Written by Miles Bader <miles@gnu.org>
#

include $(top_srcdir)/config.mk


noinst_LIBRARIES = libsnogphoton.a


libsnogphoton_a_SOURCES = photon.h photon-eval.cc photon-eval.h		\
	photon-map.cc photon-map.h photon-shooter.cc photon-shooter.h
