# Automake Makefile template for Snogray general utility library, libsnogutil.a
#
#  Copyright (C) 2005-2013  Miles Bader <miles@gnu.org>
#
# This source code is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License as
# published by the Free Software Foundation; either version 3, or (at
# your option) any later version.  See the file COPYING for more details.
#
# Written by Miles Bader <miles@gnu.org>
#

include $(top_srcdir)/config.mk
include $(top_srcdir)/install-dirs.mk


noinst_LIBRARIES = libsnogutil.a

dist_pkgluamodulesnogray_DATA = file.lua filename.lua lpeg-utils.lua	\
	  string-fill.lua string.lua swig.lua sys.lua table.lua

EXTRA_DIST = util.swg

CLEANFILES = snogpaths-data.h


libsnogutil_a_SOURCES = compiler.h cond-var.h excepts.h file-funs.cc	\
	file-funs.h float-excepts-guard.h freelist.cc freelist.h	\
	funptr-cast.h gaussian-filter.h globals.cc globals.h grab.h	\
	interp.h llist.h least-squares-fit.h matrix.h matrix.tcc	\
	matrix-funs.h matrix-funs.tcc matrix-io.h mempool.cc		\
	mempool.h mutex.h nice-io.cc nice-io.h num-cores.cc		\
	num-cores.h pool.h progress.h radical-inverse.h random.h	\
	random-boost.h random-std.h random-rand.h random-tr1.h ref.h	\
	rusage.h snogassert.cc snogassert.h snogmath.h snogpaths.cc	\
	snogpaths.h string-funs.cc string-funs.h thread.h threading.h	\
	threading-boost.h threading-std.h timeval.cc timeval.h		\
	val-table.cc unique-ptr.h val-table.h


snogpaths.o: snogpaths-data.h

# automagically-computed paths
#
snogpaths-data.h: Makefile
	$(snogpaths_verbose)( \
	  echo '// this file is automatically generated'; \
	  echo '#define SNOGRAY_PREFIX "$(prefix)"'; \
	  echo '#define SNOGRAY_BINDIR "$(bindir)"'; \
	  echo '#define SNOGRAY_PKGDATADIR "$(pkgdatadir)"' ) > "$@"

# automake "silent-rules" hook for snogpaths-data.h
#
snogpaths_verbose = $(snogpaths_verbose_$(V))
snogpaths_verbose_ = $(snogpaths_verbose_$(AM_DEFAULT_VERBOSITY))
snogpaths_verbose_0 = @echo "  PATHS   " $@;
